# event_processing

./: README.md  load_test.py
analytics_service/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
analytics_service/common/: decorators.py
analytics_service/config/: config.py  database.py
analytics_service/repo/: events.py
analytics_service/routes/: __init__.py  analytics.py  metrics.py
analytics_service/services/: __init__.py  cache_service.py  events.py
docker/: docker-compose.yml  openapi.json  openapi_fixed.json  otel-collector-config.yaml  superset-init.sh  superset_bootstrap.sh  superset_config.py  superset_dashboard.json  wait_for_services.py
docker/superset/: Dockerfile
event_consumer/: .env.example  .gitmodules  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
event_consumer/config/: config.py
event_consumer/config/database/: __init__.py  config.py
event_consumer/config/queue/: __init__.py  config.py
event_consumer/config/tracing/: __init__.py  config.py
event_consumer/models/: __init__.py  event.py
event_consumer/repo/: events.py
event_consumer/utils/: __init__.py  batch_processor.py
ingestion_service/: .env.example  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
ingestion_service/config/: config.py
ingestion_service/config/queue/: __init__.py  config.py
ingestion_service/dto/: __init__.py  event.py  response.py
ingestion_service/routes/: __init__.py  events.py  metrics.py
ingestion_service/services/: __init__.py  kafka_service.py
postman/: Event_Processing_Platform.postman_collection.json
tools/: send_events.py
